<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/login_padding_horizontal"
        android:paddingRight="@dimen/login_padding_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/login"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/double_padding"
                    android:layout_marginStart="@dimen/double_padding"
                    android:text="@string/login_call_to_action"
                    android:textSize="@dimen/text_size_headline" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_header"
                android:layout_marginTop="@dimen/double_padding">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/double_padding"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_container">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/select_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_container"
                android:layout_marginTop="@dimen/double_padding"
                android:gravity="center_vertical"
                android:minHeight="@dimen/default_view_size"
                android:text="@string/login_host"
                android:textSize="@dimen/title" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/password_container"
                android:layout_marginTop="@dimen/double_padding"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:textColor="@color/login_btn" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>